--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,4 +1,9 @@
 /* The navigation bar */
+#home-link {
+  font-style: italic;
+  font-weight: 1000;
+}
+
 .navbar {
   overflow: hidden;
   background-color: #333;
@@ -35,6 +40,7 @@
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 1em 2em;
   text-decoration: none;
+  font-weight: 1000;
 }
